fuse motorcycles and bicycles to bicycle

--- a/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
@@ -33,7 +33,7 @@ MAP_MERGE_CLASS: {
     "LargeVehicle_Bus": "Vehicle",
     "LargeVehicle_Bus_Bendy": "Vehicle",
     "Trailer": "Vehicle",
-    "Vehicle_Ridable_Motorcycle": "Vehicle",
+    "Vehicle_Ridable_Motorcycle": "Cyclist",
     "Vehicle_Ridable_Bicycle": "Cyclist",
     "Human": "Pedestrian",
     "PPObject": "DontCare",
@@ -89,11 +89,11 @@ DATA_AUGMENTOR:
       SAMPLE_GROUPS:
         #Vehicle: 15, Cyclist: 10, Pedestrian: 10
         [
-          "Vehicle_Drivable_Car:10",
-          "Vehicle_Drivable_Van:1",
+          "Vehicle_Drivable_Car:11",
+          "Vehicle_Drivable_Van:2",
           "Human:10",
-          "Vehicle_Ridable_Motorcycle:2",
-          "Vehicle_Ridable_Bicycle:10",
+          "Vehicle_Ridable_Motorcycle:5",
+          "Vehicle_Ridable_Bicycle:5",
           "LargeVehicle_Bus:1",
           "LargeVehicle_Truck:1",
           "LargeVehicle_TruckCab:0",
