added fov training for avl datasets

--- a/tools/cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
@@ -60,6 +60,16 @@ MAP_CLASS_TO_KITTI:
 #used to shift data to the ground plane when generating infos and at training time (get_lidar)
 LIDAR_Z_SHIFT: -3.4097
 
+#set label of all truncated or not in fov labels to -1 which means disregard
+#also removes point that are not in fov
+TRAIN_FOV_ONLY: True
+LIDAR_FOV: 120
+LIDAR_HEADING: 0
+DISREGARD_TRUNCATED: True
+
+#removed dets and gts that are truncated not in fov before evaluation
+EVAL_FOV_ONLY: True
+
 #height of the data origin above ground plane during detector training, should be at 0.0 if trained correctly
 #positive z value means the data origin is above the ground plane
 #shifts the detected boxes to match the ground truth boxes
