added centerpoint 4 classes configs

--- a/tools/cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
@@ -30,10 +30,10 @@ MAP_MERGE_CLASS: {
     "Vehicle_Ridable_Motorcycle": "Cyclist",
     "Vehicle_Ridable_Bicycle": "Cyclist",
     "Human": "Pedestrian",
-    "LargeVehicle_Bus": "Vehicle",
-    "LargeVehicle_TruckCab": "Vehicle",
-    "LargeVehicle_Truck": "Vehicle",
-    "Trailer": "Vehicle",
+    "LargeVehicle_Bus": "Truck",
+    "LargeVehicle_TruckCab": "Truck",
+    "LargeVehicle_Truck": "Truck",
+    "Trailer": "Truck",
     "Dont_Care": "DontCare",
     "Other": "DontCare",
     #'Placeholder': 'DontCare',
