--- a/tools/cfgs/dataset_configs/zod/OD/zod_dataset.yaml
+++ b/tools/cfgs/dataset_configs/zod/OD/zod_dataset.yaml
@@ -14,11 +14,11 @@ VERSION: "full" # 'mini', 'small' or 'full'    #dont forget to change info paths
 MAP_MERGE_CLASS: {
     "Vehicle_Car": "Vehicle",
     "Vehicle_Van": "Vehicle",
-    "Vehicle_Truck": "Vehicle",
-    "Vehicle_Trailer": "Vehicle",
-    "Vehicle_Bus": "Vehicle",
-    "Vehicle_HeavyEquip": "Vehicle",
-    "Vehicle_TramTrain": "Vehicle",
+    "Vehicle_Truck": "Truck",
+    "Vehicle_Trailer": "Truck",
+    "Vehicle_Bus": "Truck",
+    "Vehicle_HeavyEquip": "Truck",
+    "Vehicle_TramTrain": "Truck",
     "VulnerableVehicle_Motorcycle": "Cyclist",
     "VulnerableVehicle_Bicycle": "Cyclist",
     "Pedestrian": "Pedestrian",
