--- a/tools/cfgs/avltruck_models/centerpoint.yaml
+++ b/tools/cfgs/avltruck_models/centerpoint.yaml
@@ -1,4 +1,4 @@
-CLASS_NAMES: ["Vehicle", "Cyclist", "Pedestrian"]
+CLASS_NAMES: ["Vehicle", "Cyclist", "Pedestrian", "Truck"]
 
 DATA_CONFIG:
   _BASE_CONFIG_: cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
