fix centerpoint cfg

--- a/tools/cfgs/avltruck_models/centerpoint.yaml
+++ b/tools/cfgs/avltruck_models/centerpoint.yaml
@@ -29,7 +29,7 @@ MODEL:
     NAME: CenterHead
     CLASS_AGNOSTIC: False
 
-    CLASS_NAMES_EACH_HEAD: [["Vehicle", "Cyclist", "Pedestrian"]]
+    CLASS_NAMES_EACH_HEAD: [["Vehicle", "Cyclist", "Pedestrian", "Truck"]]
 
     SHARED_CONV_CHANNEL: 64
     USE_BIAS_BEFORE_NORM: True
