dsvt eval bug fixes

--- a/tools/cfgs/avlrooftop_models/dsvt_voxel.yaml
+++ b/tools/cfgs/avlrooftop_models/dsvt_voxel.yaml
@@ -104,16 +104,15 @@ MODEL:
 
     POST_PROCESSING:
       SCORE_THRESH: 0.1
-      POST_CENTER_LIMIT_RANGE: [-75.2, -75.2, -2, 123.2, 75.2, 4]
+      POST_CENTER_LIMIT_RANGE: [-74.88, -74.88, -2, 123.52, 74.88, 4.0]
       MAX_OBJ_PER_SAMPLE: 500
       USE_IOU_TO_RECTIFY_SCORE: True
-      IOU_RECTIFIER: [0.68, 0.71, 0.65]
-
+      IOU_RECTIFIER: [0.68, 0.71, 0.65, 0.68]
       NMS_CONFIG:
         NMS_TYPE: class_specific_nms
-        NMS_THRESH: [0.01, 0.01, 0.01]
-        NMS_PRE_MAXSIZE: [4096, 4096, 4096]
-        NMS_POST_MAXSIZE: [500, 500, 500]
+        NMS_THRESH: [0.01, 0.01, 0.01, 0.01]
+        NMS_PRE_MAXSIZE: [4096, 4096, 4096, 4096]
+        NMS_POST_MAXSIZE: [500, 500, 500, 500]
 
   POST_PROCESSING:
     RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
