added okeanos files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ tools/viz
 
 output_okeanos/
 tools/multieval_okeanos.py
+tools/test_crossdataset_multi_okeanos.sh
+tools/train_with_multieval_okeanos.sh
