--- a/tools/cfgs/avlrooftop_models/pvrcnnpp_ros.yaml
+++ b/tools/cfgs/avlrooftop_models/pvrcnnpp_ros.yaml
@@ -4,7 +4,7 @@ DATA_CONFIG:
     _BASE_CONFIG_: cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
 
     DATA_AUGMENTOR:
-        DISABLE_AUG_LIST: ["gt_sampling", "random_world_scaling", "random_world_rotation", "random_world_flip"]
+        DISABLE_AUG_LIST: ["placeholder"]
         AUG_CONFIG_LIST:
             - NAME: gt_sampling
               USE_ROAD_PLANE: False
