--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ output_okeanos/
 tools/multieval_okeanos.py
 tools/test_crossdataset_multi_okeanos.sh
 tools/train_with_multieval_okeanos.sh
+tools/test_multidataset_multi_okeanos.sh
