--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,8 @@ tools/test_crossdataset_multi_okeanos.sh
 tools/train_with_multieval_okeanos.sh
 tools/test_multidataset_multi_okeanos.sh
 tools/train_multi_with_pretrained_okeanos.sh
+tools/test_multidataset_okeanos.sh
+tools/test_multidetmultidataset_nosweep_okeanos.sh
+tools/test_multidetmultidataset_okeanos.sh
+tools/train_multi_with_pretrained_nosweep_okeanos.sh
+tools/xtrain_with_multieval_okeanos.sh
