--- a/tools/cfgs/DA/nusc_kitti/pv_rcnn_plus_post_SN_feat_3.yaml
+++ b/tools/cfgs/DA/nusc_kitti/pv_rcnn_plus_post_SN_feat_3.yaml
@@ -290,7 +290,7 @@ MODEL:
 
 OPTIMIZATION:
     BATCH_SIZE_PER_GPU: 4
-    NUM_EPOCHS: 8
+    NUM_EPOCHS: 
 
     OPTIMIZER: adam_onecycle
     LR: 0.0005
