--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ tools/test_multidetmultidataset_okeanos.sh
 tools/train_multi_with_pretrained_nosweep_okeanos.sh
 tools/xtrain_with_multieval_okeanos.sh
 tools/selftrain_okeanos.sh
+tools/train_st_okeanos.sh
