--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ tools/train_multi_with_pretrained_nosweep_okeanos.sh
 tools/xtrain_with_multieval_okeanos.sh
 tools/selftrain_okeanos.sh
 tools/train_st_okeanos.sh
+tools/scripts/ST/dist_train_st.sh
