--- a/tools/cfgs/avltruck_models/pvrcnnpp_STrooftop.yaml
+++ b/tools/cfgs/avltruck_models/pvrcnnpp_STrooftop.yaml
@@ -117,7 +117,7 @@ DATA_CONFIG_TAR:
           ALONG_AXIS_LIST: ["x", "y"]
 
         - NAME: random_world_rotation
-          WORLD_ROT_ANGLE: [-0,378760688, 0,378760688]
+          WORLD_ROT_ANGLE: [-0.378760688, 0.378760688]
 
         - NAME: random_world_scaling
           WORLD_SCALE_RANGE: [0.97, 1.03]
