--- a/tools/cfgs/avltruck_models/pvrcnnpp_STrooftop.yaml
+++ b/tools/cfgs/avltruck_models/pvrcnnpp_STrooftop.yaml
@@ -1,5 +1,7 @@
 _BASE_CONFIG_: cfgs/avltruck_models/pvrcnnpp.yaml
 
+CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
+
 DATA_CONFIG:
   _BASE_CONFIG_: cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
 
@@ -132,15 +134,19 @@ SELF_TRAIN:
         USE_DATA: True
         LOSS_WEIGHT: 1.0
 
-    SCORE_THRESH: [0.6, 0.6, 0.6, 0.6]             #Threshold per class
-    NEG_THRESH: [0.25, 0.25, 0.25, 0.25]
-    UPDATE_PSEUDO_LABEL: [0]        # Pseudo label generation epoch
-    UPDATE_PSEUDO_LABEL_INTERVAL: 2
+
+    SCORE_THRESH: [0.5, 0.8, 0.7, 1]             #Threshold per class
+    #SCORE_THRESH: [0.8, 1, 1, 1]             #Threshold per class
+    NEG_THRESH: [0.2, 0.2, 0.2, 1]
+    #NEG_THRESH: [0.2, 1, 1, 1]
+
+    UPDATE_PSEUDO_LABEL: [0, 1, 4]        # Pseudo label generation epoch
+    UPDATE_PSEUDO_LABEL_INTERVAL: 100
     INIT_PS: None
     
     PROG_AUG:
-        ENABLED: True
-        UPDATE_AUG: [7, 14, 21, 28]
+        ENABLED: False
+        UPDATE_AUG: [4, 8]
         SCALE: 1.2
 
     MEMORY_ENSEMBLE:
@@ -159,3 +165,26 @@ SELF_TRAIN:
             ENABLED: False
             IGNORE_THRESH: 2
             RM_THRESH: 3
+
+
+OPTIMIZATION:
+    OPTIMIZER: adam_onecycle
+    LR: 0.001
+    WEIGHT_DECAY: 0.002
+    MOMENTUM: 0.9
+
+    MOMS: [0.95, 0.85]
+    PCT_START: 0.4
+    DIV_FACTOR: 10
+    DECAY_STEP_LIST: [15]
+    LR_DECAY: 0.1
+    LR_CLIP: 0.0000001
+
+    LR_WARMUP: False
+    WARMUP_EPOCH: 1
+
+    GRAD_NORM_CLIP: 10
+    TAR_LOSS_SCALE: 1.0
+
+    SAMPLE_LOSS_SCALE: 1.0
+
