--- a/tools/cfgs/avlrooftop_models/pvrcnnpp_STtruck.yaml
+++ b/tools/cfgs/avlrooftop_models/pvrcnnpp_STtruck.yaml
@@ -140,7 +140,7 @@ SELF_TRAIN:
     NEG_THRESH: [0.2, 0.2, 0.2, 1]
     #NEG_THRESH: [0.2, 1, 1, 1]
 
-    UPDATE_PSEUDO_LABEL: [0, 1, 4]        # Pseudo label generation epoch
+    UPDATE_PSEUDO_LABEL: [0, 1]        # Pseudo label generation epoch
     UPDATE_PSEUDO_LABEL_INTERVAL: 100
     INIT_PS: None
     
