--- a/gace/cfgs/gace_zod.yaml
+++ b/gace/cfgs/gace_zod.yaml
@@ -1,4 +1,4 @@
-CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist']
+CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
 
 DATA_CONFIG:
     _BASE_CONFIG_: tools/cfgs/dataset_configs/zod/OD/zod_dataset.yaml
@@ -10,18 +10,19 @@ GACE:
     NR_MAX_DET_PER_SAMPLE: 500
     
     NORM_FACTORS: {
-        'cx': 80.0,
-        'cy': 80.0,
-        'cz': 5.0,
-        'dx': [21.0, 2.0, 4.0],
-        'dy': [4.0, 2.0, 1.5], 
-        'dz': [5.5, 2.5, 2.5],
-        'dist': 85.0,
-        'nr_pts': [70000.0, 6000.0, 6000.0],
+        'cx': 123.2,
+        'cy': 75.2,
+        'cz': 4.0,
+        #veh, ped, cyc, tru
+        'dx': [6.019, 1.142, 2.494, 27.699],
+        'dy': [2.394, 0.982, 1.072, 3.652], 
+        'dz': [2.661, 2.000, 2.000, 4.529],
+        'dist': 144.3,
+        'nr_pts': [5000.0, 1000.0, 1000.0, 60000.0],
     }
 
     NORM_FACTORS_CP: {
-        'dist': 170.0,
+        'dist': 249.0,
     }
     
     CONTEXT_RADIUS: 20
@@ -35,7 +36,7 @@ GACE:
         H_F_HIDDEN_DIM: 256
     
     TRAIN:
-        NUM_EPOCHS: 3 
+        NUM_EPOCHS: 20 
         LR: 0.002
         IOU_LOSS_W: 0.5
         SFL_ALPHA: 0.5
