--- a/tools/cfgs/avltruck_models/pvrcnnpp_STzod.yaml
+++ b/tools/cfgs/avltruck_models/pvrcnnpp_STzod.yaml
@@ -136,7 +136,7 @@ SELF_TRAIN:
 
     GACE:
       ENABLED: True
-
+      STORE_DETECTIONS: True
       CKPT: /home/cgriesbacher/thesis/3DTrans/gace/gace_output/2023-12-18_15-16-02/gace_model.pth
 
       NR_MAX_DET_PER_SAMPLE: 500
@@ -174,8 +174,8 @@ SELF_TRAIN:
           SFL_ALPHA: 0.5
           SFL_GAMMA: 1 
 
-    SCORE_THRESH: [0.5, 0.8, 0.7, 0.9]             #Threshold per class
-    NEG_THRESH: [0.2, 0.8, 0.7, 0.9]
+    SCORE_THRESH: [0.85, 0.75, 0.9, 0.95]             #Threshold per class
+    NEG_THRESH: [0.3, 0.4, 0.6, 0.65]
 
     UPDATE_PSEUDO_LABEL: [0]        # Pseudo label generation epoch
     UPDATE_PSEUDO_LABEL_INTERVAL: 100
