--- a/tools/cfgs/avltruck_models/pvrcnnpp_STzod.yaml
+++ b/tools/cfgs/avltruck_models/pvrcnnpp_STzod.yaml
@@ -69,7 +69,7 @@ DATA_CONFIG_TAR:
     _BASE_CONFIG_: cfgs/dataset_configs/zod/OD/zod_dataset.yaml
     TARGET: True
     USE_PSEUDO_LABEL: True
-    TRAIN_FOV_ONLY: False
+    TRAIN_FOV_ONLY: True
 
     CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
 
