--- a/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
@@ -75,8 +75,12 @@ DISABLE_NLZ_FLAG_ON_POINTS: True
 USE_SHARED_MEMORY: False # it will load the data to shared memory to speed up (DO NOT USE IT IF YOU DO NOT FULLY UNDERSTAND WHAT WILL HAPPEN)
 SHARED_MEMORY_FILE_LIMIT: 35000 # set it based on the size of your shared memory
 
+INCLUDE_DIODE_IDS: False
+BEAM_LABEL_VFOV: []   #TODO
+NUM_BEAMS: 32
+
 DATA_AUGMENTOR:
-  DISABLE_AUG_LIST: ["placeholder"]
+  DISABLE_AUG_LIST: ["gt_sampling"]
   #DISABLE_AUG_LIST: ['gt_sampling', 'random_world_flip', 'random_world_rotation', 'random_world_scaling']
   AUG_CONFIG_LIST:
     - NAME: gt_sampling
