--- a/tools/cfgs/zod_models/pvrcnnpp_ros_rbds.yaml
+++ b/tools/cfgs/zod_models/pvrcnnpp_ros_rbds.yaml
@@ -52,9 +52,12 @@ DATA_CONFIG:
         LIMIT_WHOLE_SCENE: True
 
       - NAME: random_beam_downsample
-        BEAM_PROB: 0.75
+        BEAM_PROB: [0.25, 1]
         FILTER_GT_BOXES: True
         MIN_POINTS_OF_GT: 5
+      
+      - NAME: random_points_downsample
+        POINTS_PROB: [0.5, 1]
 
       - NAME: random_world_flip
         ALONG_AXIS_LIST: ["x", "y"]
