distance upper and lower bound for distance thresholds multibeam lidar upsampling

--- a/tools/cfgs/dataset_configs/avlrooftop/DA/avlrooftop_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avlrooftop/DA/avlrooftop_dataset.yaml
@@ -60,6 +60,7 @@ DISREGARD_TRUNCATED: True
 
 #removed dets and gts that are truncated not in fov before evaluation
 EVAL_FOV_ONLY: True
+EVAL_MAX_DISTANCE: [0, 1000]
 
 POST_SN_ENABLED: False
 POST_SN_SOURCE: "ZOD"
@@ -151,6 +152,7 @@ DATA_AUGMENTOR:
     - NAME: random_beam_upsample
       PHI_THRESHOLD: 0.006666667    #1/300*2 rad,
       R_THRESHOLD: 2.0                #meters
+      NUM_INTERP_BEAMS: 1
 
     - NAME: uniform_beam_downsample
       BEAM_DOWNSAMPLEFACTOR: [1]
