--- a/tools/cfgs/zod_models/pvrcnnpp_ros_ubds4.yaml
+++ b/tools/cfgs/zod_models/pvrcnnpp_ros_ubds4.yaml
@@ -7,7 +7,7 @@ DATA_CONFIG:
 
 
   DATA_AUGMENTOR:
-    DISABLE_AUG_LIST: ["uniform_beam_downsample", "random_points_downsample"]
+    DISABLE_AUG_LIST: ["random_points_downsample", "random_beam_downsample"]
     #DISABLE_AUG_LIST: ["random_world_flip", "random_world_rotation", "random_world_scaling"]
     AUG_CONFIG_LIST:
       - NAME: gt_sampling
@@ -52,12 +52,12 @@ DATA_CONFIG:
         LIMIT_WHOLE_SCENE: True
 
       - NAME: random_beam_downsample
-        BEAM_PROB: 0.5
+        BEAM_PROB: [0.25, 1]
         FILTER_GT_BOXES: True
         MIN_POINTS_OF_GT: 5
       
       - NAME: uniform_beam_downsample
-        DOWNSAMPLEFACTOR: 4
+        BEAM_DOWNSAMPLEFACTOR: 4
         FILTER_GT_BOXES: True
         MIN_POINTS_OF_GT: 5
       
