--- a/tools/cfgs/zod_models/pvrcnnpp_rosror_rbds.yaml
+++ b/tools/cfgs/zod_models/pvrcnnpp_rosror_rbds.yaml
@@ -75,3 +75,7 @@ DATA_CONFIG:
 
       - NAME: random_object_scaling
         SCALE_UNIFORM_NOISE: [0.9, 1.10]
+
+      - NAME: random_object_rotation
+        ROT_PROB: 0.8
+        ROT_UNIFORM_NOISE: [ -0.38539816, 0.38539816 ]
