--- a/tools/cfgs/dataset_configs/zod/DA/zod_dataset.yaml
+++ b/tools/cfgs/dataset_configs/zod/DA/zod_dataset.yaml
@@ -37,7 +37,7 @@ FOV_POINTS_ONLY: True
 EVAL_MAX_DISTANCE: [0, 1000]
 
 POST_SN_ENABLED: True
-POST_SN_SOURCE: "AVLRooftop"
+POST_SN_SOURCE: "AVLTruck"
 POST_SN_MAP: {
   "AVLRooftop":   
     {"Vehicle": [-0.256, -0.191, -0.086],
